--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: attendance-system
+    name: attendace-system
     env: python
     plan: free
     buildCommand: "pip install -r requirements.txt"
@@ -8,3 +8,4 @@ services:
     envVars:
       - key: SECRET_KEY
         generateValue: true
+
